--- a/incrowd/frontend/src/components/post/post.html
+++ b/incrowd/frontend/src/components/post/post.html
@@ -1,4 +1,4 @@
-<div class="md-whiteframe-z1 post {{ post.category.color }}">
+<div class="md-whiteframe-z1 post {{ post.category.color }}" ng-cloak>
   <md-toolbar class="{{ post.category.color }}"
               ng-switch="post.type">
     <div class="md-toolbar-tools md-padding" layout="row">
