--- a/incrowd/frontend/src/templates/invite.html
+++ b/incrowd/frontend/src/templates/invite.html
@@ -7,7 +7,7 @@
       <md-subheader class="md-primary">
         <h3>The only way people can join your group is by being invited.</h3>
 
-        <h1>Invite: {{ invite }}</h1>
+        <!--<h1>Invite: {{ invite }}</h1>-->
       </md-subheader>
 
       <form ng-submit="invite_submit()" ng-controller="InviteCtrl"
