Converting new post, tabs, profile, signup to new frontend

--- a/incrowd/frontend/src/components/new_post/new_post.html
+++ b/incrowd/frontend/src/components/new_post/new_post.html
@@ -17,10 +17,7 @@
     <md-checkbox ng-model="formData.nsfw" aria-label="NSFW">
       NSFW?
     </md-checkbox>
-
-    <md-button class="md-raised md-primary" type="submit">
-      Submit
-    </md-button>
+    <md-button class="md-raised md-primary" type="Submit">Submit</md-button>
   </form>
   </div>
 </md-dialog>
