--- a/incrowd/frontend/src/templates/invite.html
+++ b/incrowd/frontend/src/templates/invite.html
@@ -10,7 +10,7 @@
         <!--<h1>Invite: {{ invite }}</h1>-->
       </md-subheader>
 
-      <form ng-submit="invite_submit()" ng-controller="InviteCtrl"
+      <form ng-submit="inviteSubmit()" ng-controller="InviteCtrl"
             class="md-padding">
         <md-input-container>
           <label>Email (Optional)</label>
