Fixing build system to use config JSON

--- a/incrowd/frontend/src/assets/css/incrowd.css
+++ b/incrowd/frontend/src/assets/css/incrowd.css
@@ -433,6 +433,7 @@ md-sidenav.nav-sidenav md-toolbar {
 
 md-sidenav.nav-sidenav md-content {
     background-color: #f2f2f2;
+    overflow-x: hidden;
 }
 
 .main-toolbar {
