--- a/incrowd/frontend/src/components/chat/chat.html
+++ b/incrowd/frontend/src/components/chat/chat.html
@@ -1,22 +1,4 @@
 <md-list ng-controller="ChatCtrl" md-scroll-y layout="column"
-         class="chat_container chat_padding">
-  <md-item ng-repeat="message in chats" ng-class="chatHighlight(message)" >
-    <div layout="row">
-      <avatar user="message.user"></avatar>
-    </div>
-    <div class="chat_message">
-      <span class="text" ng-bind="(message.message | ChatMessageFilter)" flex></span>
-      <div layout="row">
-        <a class="chat_attachment" ng-if="message.attachment_url"
-           ng-href="{{ message.attachment_url }}">
-          <img scroll-chat-on-load ng-src="{{ message.attachment_url }}">
-        </a>
-      </div>
-
-      <p><a class="username" ng-href="#/user/{{message.username}}">{{message.username}}</a>
-        | {{ message.sent | DTSince }}
-        <span ng-if="message.user.id == user.id"> |
-          <a href="" ng-click="delete_message(message.id)">delete</a></span></p>
-    </div>
-  </md-item>
+         class="chat-container chat-padding">
+    <chat-message ng-repeat="message in chats" message="message"></chat-message>
 </md-list>
