--- a/incrowd/frontend/src/assets/css/incrowd.css
+++ b/incrowd/frontend/src/assets/css/incrowd.css
@@ -21,8 +21,6 @@
 }
 
 .content {
-    height: 100%;
-    display: block;
     padding: 10px 10px 15px 10px;
 }
 
@@ -272,7 +270,7 @@ h1.title a {
 }
 
 body {
-    background-color: #f2f2f2;;
+    background-color: #f2f2f2;
 }
 
 #content {
