--- a/incrowd/frontend/src/templates/profiles.html
+++ b/incrowd/frontend/src/templates/profiles.html
@@ -1,4 +1,4 @@
 <div class="content scroll" >
-  <profile ng-repeat="profile in profiles"></profile>
+  <profile ng-repeat="user in users" user="user"></profile>
 </div>
 
