--- a/incrowd/frontend/src/components/comment/comment_list.html
+++ b/incrowd/frontend/src/components/comment/comment_list.html
@@ -8,7 +8,7 @@
     <form ng-submit="new_comment_submit()">
       <md-input-container flex>
         <label>Add comment</label>
-        <textarea ng-model="formData.text" columns="1" style="height: 23px;"></textarea>
+        <textarea ng-model="formData.text" columns="1"></textarea>
       </md-input-container>
       <md-button class="md-raised md-primary" type="submit">
         Comment
