--- a/incrowd/frontend/src/components/new_post/new_post.html
+++ b/incrowd/frontend/src/components/new_post/new_post.html
@@ -17,17 +17,11 @@
     <md-checkbox ng-model="formData.nsfw" aria-label="NSFW">
       NSFW?
     </md-checkbox>
-    <section layout="row"
-             layout-sm="column"
-             layout-align="center center"
-             layout-wrap>
+    <section layout="row" layout-align="center center" layout-wrap>
       <md-button class="md-raised md-primary" type="Submit" flex>Submit
       </md-button>
-      <md-button class="md-raised md-warn"
-                 type="Submit"
-                 ng-click="cancel()"
-                 flex>
-          Cancel
+      <md-button class="md-raised md-warn" type="Submit" ng-click="cancel()" flex>
+        Cancel
       </md-button>
     </section>
 
