Fix Docker build speed, notifications/highlights
Use symlinks instead of mv to speed up Docker building of the frontend,
and not invalidate the cache as often.

Fixed handling of notifications (would 500 on any ping in chat), add
highlighting to chat and comments.

--- a/incrowd/frontend/src/components/chat/chat.css
+++ b/incrowd/frontend/src/components/chat/chat.css
@@ -164,7 +164,8 @@ chatinput {
     background-color: rgba(239, 139, 24, .4);
 
     /*color: #eee;*/
-    padding: 0 2px;
+    padding: 2px;
+    margin: 0 2px;
 }
 
 .chat-attachment {
