--- a/incrowd/frontend/src/components/chat/message.html
+++ b/incrowd/frontend/src/components/chat/message.html
@@ -3,7 +3,7 @@
     <avatar user="message.user"></avatar>
     <div class="container">
       <span class="text"
-            ng-bind="(message.message | ChatMessageFilter)"
+            ng-bind-html="(message.message | HighlightFilter)"
             flex></span>
     </div>
   </div>
