Fix notification handling
Make clear notifications button work, make binding to
Notifications.notifications work properly, make notifcations sidebar
chip update correctly. Cache initial poll lookup and make it work
with $q.all() in Config.

Also add a close button for sidenav on small screens.

--- a/incrowd/frontend/src/assets/css/incrowd.css
+++ b/incrowd/frontend/src/assets/css/incrowd.css
@@ -474,3 +474,7 @@ md-input-container textarea.md-input {
 .md-subheader .md-subheader-content {
     z-index: 2;
 }
+
+.close-button {
+    margin-left: 15px;
+}
