--- a/incrowd/frontend/src/components/avatar/avatar.html
+++ b/incrowd/frontend/src/components/avatar/avatar.html
@@ -1,6 +1,5 @@
 <div class="avatar-circular">
   <a ng-href="#/user/{{ user.username }}">
-    <img class="avatar-pic" ng-src="{{ user.profile_pic }}"
-         title="{{ user.username }}" />
+    <img class="avatar-pic" back-img="{{ user.profile_pic }}" />
   </a>
 </div>
