--- a/incrowd/frontend/src/assets/css/incrowd.css
+++ b/incrowd/frontend/src/assets/css/incrowd.css
@@ -439,9 +439,12 @@ md-sidenav.nav-sidenav md-content {
     height: 64px;
 }
 
-.menu {
+.title .menu {
     cursor: pointer;
     cursor: hand;
+    font-size: 135%;
+    margin-right: 10px;
+    margin-top: 5px;
 }
 
 .hide-tab {
