--- a/incrowd/frontend/src/components/post/post.html
+++ b/incrowd/frontend/src/components/post/post.html
@@ -8,7 +8,7 @@
           <a ng-if="post.type == 'link'" target="_blank"
              ng-href="{{ post.url }}">
             {{ post.title }}
-            <span class="icon-link icomoon link"></span>
+            <span class="icon-open_in_new icomoon link"></span>
           </a>
           <a ng-if="post.type != 'link'" ng-href="#/posts/{{ post.id }}">
             {{ post.title }}
