--- a/incrowd/frontend/src/templates/login.html
+++ b/incrowd/frontend/src/templates/login.html
@@ -16,7 +16,7 @@
         list.</p>
       <span class="tagline">Are you in?</span>
 
-      <form ng-submit="login(credentials)" ng-controller="AuthCtrl" novalidate>
+      <form ng-submit="login(credentials)" ng-controller="LoginCtrl" novalidate>
         <md-input-container>
           <label>Username</label>
           <input ng-model="credentials.username"
