--- a/incrowd/frontend/src/components/chat/chat.css
+++ b/incrowd/frontend/src/components/chat/chat.css
@@ -140,14 +140,12 @@ chatinput {
 .connected_users {
     color: #eee;
     border-bottom: 1px solid #eee;
-    padding-bottom: 10px;
+    padding: 10px;
     margin-bottom: 0;
     position: fixed;
     width: 100%;
     z-index: 2;
     background-color: white;
-    padding-top: 20px;
-    /*margin-top: -16px;*/
 }
 
 .connect_users_title {
